--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "react-redux-mdl",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "Implementation of Material Design Lite for React and Redux",
   "main": "index.js",
   "homepage": "https://github.com/PCreations/react-redux-mdl.git",
   "scripts": {
-    "prepublish": "babel --plugins 'transform-es2015-modules-umd' src --ignore __tests__ --out-dir ./dist",
-    "lint": "eslint ./src",
-    "lintfix": "eslint ./src --fix",
-    "testonly": "mocha $npm_package_options_mocha",
-    "test": "npm run lint && npm run testonly",
-    "test-watch": "npm run testonly -- --watch --watch-extensions js"
+    "build:lib": "babel src --out-dir lib",
+    "build:umd": "cross-env NODE_ENV=development webpack src/index.js dist/react-redux-mdl.js",
+    "build:umd:min": "cross-env NODE_ENV=production webpack src/index.js dist/react-redux-mdl.min.js",
+    "build": "npm run build:lib && npm run build:umd && npm run build:umd:min && node ./prepublish",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "mdl",
@@ -28,44 +27,40 @@
     "mocha": "--require scripts/mocha_runner src/**/__tests__/**/*.js"
   },
   "devDependencies": {
-    "babel-cli": "^6.6.4",
-    "babel-core": "^6.7.4",
-    "babel-eslint": "^6.0.2",
-    "babel-plugin-transform-es2015-modules-umd": "^6.6.5",
-    "babel-plugin-webpack-loaders": "^0.4.0",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "enzyme": "^2.2.0",
-    "eslint": "^2.7.0",
-    "eslint-plugin-babel": "^3.1.0",
-    "eslint-plugin-react": "^4.2.3",
-    "expect": "^1.15.2",
-    "jsdom": "^8.1.0",
-    "mocha": "^2.4.5",
-    "nodemon": "^1.9.1",
-    "react-addons-perf": "^15.0.2",
-    "react-addons-pure-render-mixin": "^15.0.1",
-    "react-hot-loader": "^1.3.0",
-    "react-inline": "^0.8.2",
-    "sinon": "^1.17.3",
-    "webpack": "^1.12.15",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "dependencies": {
+    "babel-cli": "^6.3.17",
+    "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
-    "babel-runtime": "^6.6.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-2": "^6.11.0",
+    "babel-register": "^6.9.0",
     "classnames": "^2.2.5",
+    "cross-env": "^1.0.7",
     "dialog-polyfill": "^0.4.3",
+    "es3ify": "^0.2.0",
     "fbjs": "^0.2.1",
+    "glob": "^6.0.4",
     "react": "^15.0.1",
     "react-addons-create-fragment": "^15.0.2",
     "react-addons-pure-render-mixin": "^15.0.2",
     "react-addons-shallow-compare": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
-    "react-tap-event-plugin": "^0.2.0"
+    "react-redux": "^4.4.5",
+    "react-tap-event-plugin": "^0.2.0",
+    "redux": "^3.0.0",
+    "redux-saga": "^0.10.4",
+    "webpack": "^1.11.0"
+  },
+  "dependencies": {
+    "lodash": "^4.2.0",
+    "recompose": "^0.20.0"
+  },
+  "peerDependencies": {
+    "react": "^0.14.0 || ^15.0.0-0",
+    "redux": "^2.0.0 || ^3.0.0",
+    "react-redux": "^4.4.5"
   },
   "author": "Pierre Criulanscy",
   "license": "MIT"
