--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-redux-mdl",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Implementation of Material Design Lite for React and Redux",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "homepage": "https://github.com/PCreations/react-redux-mdl.git",
   "scripts": {
     "build:lib": "babel src --out-dir lib",
@@ -43,6 +43,7 @@
     "glob": "^6.0.4",
     "react": "^15.0.1",
     "react-addons-create-fragment": "^15.0.2",
+    "react-addons-perf": "^15.2.1",
     "react-addons-pure-render-mixin": "^15.0.2",
     "react-addons-shallow-compare": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
@@ -51,7 +52,8 @@
     "react-tap-event-plugin": "^0.2.0",
     "redux": "^3.0.0",
     "redux-saga": "^0.10.4",
-    "webpack": "^1.11.0"
+    "webpack": "^1.11.0",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "lodash": "^4.2.0",
