--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-redux-mdl",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Implementation of Material Design Lite for React and Redux",
   "main": "./lib/index.js",
   "homepage": "https://github.com/PCreations/react-redux-mdl.git",
@@ -35,34 +35,38 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-2": "^6.11.0",
     "babel-register": "^6.9.0",
-    "classnames": "^2.2.5",
     "cross-env": "^1.0.7",
-    "dialog-polyfill": "^0.4.3",
     "es3ify": "^0.2.0",
     "fbjs": "^0.2.1",
     "glob": "^6.0.4",
     "react": "^15.0.1",
     "react-addons-create-fragment": "^15.0.2",
     "react-addons-perf": "^15.2.1",
-    "react-addons-pure-render-mixin": "^15.0.2",
+    "react-addons-pure-render-mixin": "^15.0.1",
     "react-addons-shallow-compare": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.5",
-    "react-tap-event-plugin": "^0.2.0",
+    "react-tap-event-plugin": "^0.2.0 || ^ 1.0.0",
     "redux": "^3.0.0",
     "redux-saga": "^0.10.4",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
+    "dialog-polyfill": "^0.4.3",
     "lodash": "^4.2.0",
-    "recompose": "^0.20.0"
+    "recompose": "^0.20.0",
+    "react-tap-event-plugin": "^0.2.0 || ^ 1.0.0"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0-0",
     "redux": "^2.0.0 || ^3.0.0",
-    "react-redux": "^4.4.5"
+    "react-redux": "^4.4.5",
+    "react-addons-create-fragment": "^15.0.1",
+    "react-addons-pure-render-mixin": "^15.0.1",
+    "react-addons-shallow-compare": "^15.0.1"
   },
   "author": "Pierre Criulanscy",
   "license": "MIT"
