--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-redux-mdl",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Implementation of Material Design Lite for React and Redux",
   "main": "./lib/index.js",
   "homepage": "https://github.com/PCreations/react-redux-mdl.git",
@@ -27,8 +27,8 @@
     "mocha": "--require scripts/mocha_runner src/**/__tests__/**/*.js"
   },
   "devDependencies": {
-    "babel-cli": "^6.3.17",
-    "babel-core": "^6.10.4",
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
@@ -56,9 +56,8 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "dialog-polyfill": "^0.4.3",
-    "lodash": "^4.2.0",
-    "recompose": "^0.20.0",
-    "react-tap-event-plugin": "^0.2.0 || ^ 1.0.0"
+    "react-tap-event-plugin": "^0.2.0 || ^ 1.0.0",
+    "recompose": "^0.20.0"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0-0",
